<resources>
    <string name="app_name">Foody</string>
    <string name="food_api_key">2d20b585a4284034acb59c4bb4723338</string>
    <string name="food_api_base_url">https://api.spoonacular.com/recipes/</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorite_recipes">Favorite Recipes</string>
    <string name="fun_facts">Fun Facts</string>
    <string name="cd_recipes">cd_recipes</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="bread">Bread</string>
    <string name="marinade">Marinade</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="diet">Diet</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="overview">Overview</string>
    <string name="ingredient">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="diary_free">Diary Free</string>
    <string name="favorite">Favorite</string>
    <string name="recipe_saved">Recipe Saved.</string>
    <string name="okay">Okay</string>
    <string name="removed_from_favorites">Removed from Favorites</string>
    <string name="no_favorite_recipes">No favorite recipes</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="delete_all">Delete all</string>
    <string name="all_recipes_deleted_msg">All favorite recipes have been deleted.</string>
</resources>